--- a/general/算法复杂度分析.md
+++ b/general/算法复杂度分析.md
@@ -1,1 +1,83 @@
 # 算法复杂度分析
+## 什么是算法复杂度
+算法复杂度是指算法在编写成可执行程序后，运行时所需要的资源，资源包括时间资源和内存资源。应用于数学和计算机导论。
+## 评价因素
+1.时间复杂度
+2.空间复杂度
+## 时间复杂度分析
+### 时间频度
+一个算法中的语句执行次数称为**语句频度**或**时间频度**。记为T(n)。
+**算法的时间复杂度**是指执行算法所需要的计算工作量。
+### 时间复杂度
+问题规模n不断发生变化时，时间频度T(n)也会不断变化，时间复杂度反应了T(n)随n变化的规律；
+在各种不同算法中，若算法中语句执行次数为一个常数，则时间复杂度为O(1)；
+在时间频度不相同时，时间复杂度有可能相同，如T(n)=n^2+3n+4与T(n)=4n^2+2n+1它们的频度不同，但时间复杂度相同，都为O(n^2)；
+按数量级递增排列，常见的时间复杂度有：
+常数阶O(1),对数阶O(log2n)(以2为底n的对数，下同),线性阶O(n),线性对数阶O(nlog2n),平方阶O(n^2)，立方阶O(n^3),...k次方阶O(n^k),指数阶O(2^n)。
+随着问题规模n的不断增大，上述时间复杂度不断增大，算法的执行效率越低。
+## 空间复杂度
+**空间复杂度**是指算法在计算机内执行时所需存储空间的度量。
+算法执行期间所需要的存储空间包括3个部分：
+1.算法程序所占的空间；
+2.输入的初始数据所占的存储空间；
+3.算法执行过程中所需要的额外空间；
+在许多实际问题中，为了减少算法所占的存储空间，通常采用压缩存储技术。
+
+## 时间复杂度计算
+1、根据定义，可以归纳出基本的计算步骤 
+（1.）计算出基本操作的执行次数T(n) 
+    基本操作即算法中的每条语句的执行次数一般默认为考虑最坏的情况。
+（2）计算出T(n)的数量级 
+    求T(n)的数量级，只要将T(n)进行如下一些操作：
+    忽略常量、低次幂和最高次幂的系数
+    令f(n)=T(n)的数量级。
+（3）用大O来表示时间复杂度 
+例:
+  for（i=1;i<=n;++i）
+  {
+     for(j=1;j<=n;++j)
+     {
+         c\[ i ]\[ j ]=0; //该步骤属于基本操作 执行次数：n^2
+          for(k=1;k<=n;++k)
+               c\[ i ]\[ j ]+=a\[ i ]\[ k ]\*b\[ k ]\[ j ]; //该步骤属于基本操作 执行次数：n^3
+     }
+  }
+  则有 T（n）= n^2+n^3，根据上面括号里的同数量级，我们可以确定 n^3为T（n）的同数量级
+  则有f（n）= n^3，然后根据T（n）/f（n）求极限可得到常数c
+  则该算法的 时间复杂度：T（n）=O（n^3)
+2、于是我们发现根本没必要都算，所以我们有了精简后的步骤：
+1. 找到执行次数最多的语句 
+2. 计算语句执行次数的数量级
+3. 用大O来表示结果 
+eg:
+(1)   for(i=1;i<=n;i++)     //循环了n\*n次，当然是O(n^2)
+            for(j=1;j<=n;j++)
+                 s++;
+（2）for(i=1;i<=n;i++)   //循环了(n+n-1+...+1)≈(n^2)/2 ,同上                                              
+           for(j=i;j<=n;j++)
+                 s++;
+(4)   i=1;k=0;
+      while(i<=n-1){
+           k+=10\*i;
+      i++;      }
+//循环了
+//n-1≈n次，所以是O(n)
+(5)   for(i=1;i<=n;i++)
+             for(j=1;j<=i;j++)
+                 for(k=1;k<=j;k++)
+                       x=x+1;
+//循环了(1^2+2^2+3^2+...+n^2)=n(n+1)(2n+1)/6≈(n^3)/3，
+//即O（n^3)
+（6)
+x=91; y=100;
+while(y>0) if(x>100) {x=x-10;y--;} else x++;
+ //T(n)=O(1)，与n无关
+（7）i=n-1;            
+while(i>=0&&(A\[i]!=k))       
+      i--;        
+return i;   
+//此算法中的语句(3)的频度不仅与问题规模n有关，还与输入实例中A的各元素取值及K的取值有关: ①若A中没有与K相等的元素，则语句(3)的频度f(n)=n； ②若A的最后一个元素等于K,则语句(3)的频度f(n)是常数0。
+综上：
+1、取决于执行次数最多的语句，如当有若干个循环语句时，算法的时间复杂度是由嵌套层数最多的循环语句中最内层语句的频度f(n)决定的。
+2、如果算法的执行时间不随着问题规模n的增加而增长，即使算法中有上千条语句，其执行时间也不过是一个较大的常数。此类算法的时间复杂度是O(1)
+3、算法的时间复杂度不仅仅依赖于问题的规模，还与输入实例的初始状态有关。
