--- a/general/算法复杂度分析.md
+++ b/general/算法复杂度分析.md
@@ -50,32 +50,33 @@
 2. 计算语句执行次数的数量级
 3. 用大O来表示结果 
 eg:
+
 (1)  
 `for(i=1;i<=n;i++)     //循环了n\*n次，当然是O(n^2)
             for(j=1;j<=n;j++)
                  s++;`
-（2）`for(i=1;i<=n;i++)   //循环了(n+n-1+...+1)≈(n^2)/2 ,同上                                              
+（2）```for(i=1;i<=n;i++)   //循环了(n+n-1+...+1)≈(n^2)/2 ,同上                                              
            for(j=i;j<=n;j++)
-                 s++;`
-(4)  `i=1;k=0;
+                 s++;```
+(4)  ```i=1;k=0;
       while(i<=n-1){
            k+=10\*i;
       i++;      }
 //循环了
-//n-1≈n次，所以是O(n)` 
-(5)  `for(i=1;i<=n;i++)
+//n-1≈n次，所以是O(n)```
+(5)  ```for(i=1;i<=n;i++)
              for(j=1;j<=i;j++)
                  for(k=1;k<=j;k++)
                        x=x+1;
 //循环了(1^2+2^2+3^2+...+n^2)=n(n+1)(2n+1)/6≈(n^3)/3，
-//即O（n^3)`
-（6)`x=91; y=100;
+//即O（n^3)```
+（6)```x=91; y=100;
 while(y>0) if(x>100) {x=x-10;y--;} else x++;
  //T(n)=O(1)，与n无关
 （7）i=n-1;            
 while(i>=0&&(A\[i]!=k))       
       i--;        
-return i;   `
+return i; ```
 
 //此算法中的语句(3)的频度不仅与问题规模n有关，还与输入实例中A的各元素取值及K的取值有关: ①若A中没有与K相等的元素，则语句(3)的频度f(n)=n； ②若A的最后一个元素等于K,则语句(3)的频度f(n)是常数0。
 综上：
